--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -93,9 +93,7 @@
         <button id="button-stichtage-1"
                 dropdownToggle
                 type="button"
-                class="btn dropdown-toggle nav-link mobileBtn"
-                aria-controls="dropdown-stichtage-1"
-                aria-haspopup="true">
+                class="btn dropdown-toggle nav-link mobileBtn">
             <span i18n>Stichtag</span> : {{stichtag | date}}
             <span class="caret"
                   aria-hidden="true"></span>
@@ -134,9 +132,7 @@
         <button id="button-teilmarkt-1"
                 dropdownToggle
                 type="button"
-                class="btn dropdown-toggle nav-link mobileBtn"
-                aria-controls="dropdown-teilmarkt-1"
-                aria-haspopup="true">
+                class="btn dropdown-toggle nav-link mobileBtn">
             <span i18n>Teilmarkt</span>: {{teilmarkt?.text}}
             <span class="caret"
                   aria-hidden="true"></span>
