--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -14,7 +14,7 @@
                  i18n-alt
                  alt="LGLN Logo">
             <strong class="d-inline">
-                <span i18n>Immobilienmarkt</span>
+                <span i18n>Demo-Test-Branch</span>
                 <span style="color: #c4153a;"
                       i18n>.NI</span>
             </strong>
