--- a/power/src/app/static/ogc-services/ogc-services.component.html
+++ b/power/src/app/static/ogc-services/ogc-services.component.html
@@ -5,7 +5,7 @@
 
         <p class="lead mb-2"
            i18n>Das LGLN stellt gebührenfreie WMS und WFS Dienste der Bodenrichtwerte in Niedersachsen bereit. Die
-            Bodenrichtwerte werden als Jahrgangsdienstedienste zur Verfügung gestellt und sind VBORIS2 konform. Unsere
+            Bodenrichtwerte werden als Jahrgangsdienste zur Verfügung gestellt und sind VBORIS2 konform. Unsere
             Datendienste werden unter der Datenlizenz Deutschland Namensnennung 2.0 bereitgestellt.</p>
         <a class="btn btn-primary mr-0 mr-sm-2 mb-2 mb-sm-0 d-block d-sm-inline"
            role="button"
