--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -1,5 +1,7 @@
 <main class="mainpage"
       id="content">
+    <h1 class="sr-only"
+        i18n>Immobilienmarkt Portal Niedersachsen</h1>
     <div class="mb-5">
         <carousel [interval]="5000"
                   [pauseOnFocus]="true"
