Fix some issues

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -12,7 +12,7 @@
                 <div class="row"
                      role="row">
                     <h5 class="col-md-5 mb-0"
-                        role="rowheader"><b>{{brzStrings.brz | hyphenate}} </b>
+                        role="rowheader"><strong>{{brzStrings.brz | hyphenate}}</strong>
                         <svg *ngIf="teilmarkt?.value[0] === 'LF'; else svgBauland"
                              viewBox="0 0 20 22"
                              width="24"
