Fix some issues

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -308,7 +308,7 @@
             <div class="row"
                  role="row">
                 <h5 class="col-12 mb-0"
-                    role="columnheader"><b i18n>Herausgeber</b>
+                    role="columnheader"><strong i18n>Herausgeber</strong>
                 </h5>
             </div>
         </div>
