--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/umrechnung/umrechnung.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/umrechnung/umrechnung.component.html
@@ -3,7 +3,7 @@
         <div class="col-sm p-1">
             <div class="card">
                 <div class="card-header">
-                    <b i18n>Erklärungen</b>
+                    <strong i18n>Erklärungen</strong>
                 </div>
                 <div class="card-body">
                     <ng-container [ngSwitch]="table.text">
@@ -78,7 +78,7 @@
         <div class="col-sm p-1">
             <div class="card">
                 <div class="card-header">
-                    <b i18n>Umrechnungstabelle</b>
+                    <strong i18n>Umrechnungstabelle</strong>
                 </div>
                 <div class="card-body p-0">
                     <table class="table table-bordered">
@@ -107,7 +107,7 @@
         <div class="col-sm p-1">
             <div class="card">
                 <div class="card-header">
-                    <b i18n>Beispielrechnung</b>
+                    <strong i18n>Beispielrechnung</strong>
                 </div>
                 <div class="card-body">
                     <p><span i18n>Bodenrichtwert</span>: {{brw}} € / m²</p>
