--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -276,6 +276,8 @@
 
         <div class="card-body table-responsive p-0">
             <table class="table table-hover m-0">
+                <caption class="sr-only"
+                         i18n>Liste der Antworten</caption>
                 <thead>
                     <tr>
                         <th *ngIf="form.access !== 'public'"
