--- a/power/src/app/gmb/gmb/gmb.component.html
+++ b/power/src/app/gmb/gmb/gmb.component.html
@@ -69,9 +69,9 @@
                  role="row">
                 <h5 class="col-md-12 mb-0"
                     role="columnheader">
-                    <b *ngIf="rd.name !== 'Niedersachsen'"
-                       class="mr-1"
-                       i18n>Gutachterausschuss</b>
+                    <strong *ngIf="rd.name !== 'Niedersachsen'"
+                            class="mr-1"
+                            i18n>Gutachterausschuss</strong>
                     <strong>{{rd.name}}</strong>
                 </h5>
             </div>
