--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -70,8 +70,8 @@
     <!-- modal buttons -->
     <div class="modal-footer"
          powerModalminiFooter>
-        <label class="text-muted"
-               i18n>* Pflichtfeld</label>
+        <span class="text-muted"
+              i18n>* Pflichtfeld</span>
         <button type="button"
                 class="btn btn-success"
                 i18n-title
