--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -97,7 +97,7 @@
                                     </h6>
                                     <ng-template [ngTemplateOutlet]="flurstueckskennzeichen"></ng-template>
                                 </div>
-                                <div class="col-12 col-lg-auto p-0">
+                                <div class="col-12 col-lg-2 p-0">
                                     <ng-template [ngTemplateOutlet]="detailsFunctionButtons"></ng-template>
                                 </div>
                             </div>
