fix zoom probleme

--- a/power/src/app/shared/advanced-search/flurstueck-search/flurstueck-search.component.html
+++ b/power/src/app/shared/advanced-search/flurstueck-search/flurstueck-search.component.html
@@ -3,7 +3,7 @@
       #form="ngForm">
     <div class="form-row py-1 align-items-center">
         <div class="col-12">
-            <label i18n>Gemarkung</label>
+            <span i18n>Gemarkung</span>
         </div>
         <div class="col-auto"
              [ngClass]="loading ? 'd-block' : 'd-none'">
