Added more content to pdf

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -148,7 +148,7 @@
                         alt="Bodenrichtwerte - amtlicher Ausdruck"
                         title="Bodenrichtwerte - amtlicher Ausdruck"
                         i18n-title
-                        (click)="pdf.create()">
+                        (click)="mapService.zoomToSelection(); openPDF()">
                     <svg xmlns="http://www.w3.org/2000/svg"
                          width="20px"
                          height="20px"
