--- a/power/src/app/gmb/gmb/gmb.component.html
+++ b/power/src/app/gmb/gmb/gmb.component.html
@@ -24,11 +24,7 @@
     </div>
 
     <div *ngIf="isBrowser && mode === 'gmb'"
-         echarts
-         [options]="mapOptions"
-         [loading]="!mapLoaded"
-         (chartInit)="onChartInit($event)"
-         (chartMapSelectChanged)="onMapSelectChange($event)"
+         #echartsMap
          class="demo-chart chart-map"></div>
 
 
